--- a/task_1+task_3/task8_4.html
+++ b/task_1+task_3/task8_4.html
@@ -48,9 +48,11 @@
 
     <section style="background-color: rgb(121, 211, 211);" class="container">
         <section
-            style="background-color: rgba(244, 248, 230, 0.885); grid-column:span 4; margin-top: 10px; margin-bottom: 10px; margin-right: 5px;margin-left: 5px;"
+            style="background-color: rgba(244, 248, 230, 0.885); grid-column:span 4; margin-top: 10px; margin-bottom: 10px; margin-right: 5px;margin-left: 5px;font-size: 25px;display: flex;text-align: center;justify-content: center; "
+            id="display"
             class="child c--2">
-            <h1 id="display" style="margin-top: 25%; "></h1>
+            
+            <h1  style="margin-top: 25%;"></h1>
         </section>
         <section style="margin-left: 10px;" class="child c--2">
             <h1 style="margin-top: 25%; ">1</h1>
@@ -62,7 +64,7 @@
             <h1 style="margin-top: 25%; ">3</h1>
         </section>
         <section style="background-color: rgb(255, 232, 82);margin-right: 10px;" class="child c--6">
-            <h1 style="margin-top: 25%;">+</h1>
+            <h1 style="margin-top: 25%;font-size: 50px;">+</h1>
         </section>
         <section style="margin-left: 10px;" class="child c--7">
             <h1 style="margin-top: 25%; ">4</h1>
@@ -74,7 +76,7 @@
             <h1 style="margin-top: 25%; ">6</h1>
         </section>
         <section style="background-color: rgb(255, 232, 82);margin-right: 10px;" class="child c--6">
-            <h1 style="margin-top: 25%;">+</h1>
+            <h1 style="margin-top: 25%;font-size: 50px;">-</h1>
         </section>
         <section style="margin-left: 10px;" class="child c--11">
             <h1 style="margin-top: 25%; ">7</h1>
@@ -86,19 +88,19 @@
             <h1 style="margin-top: 25%; ">9</h1>
         </section>
         <section style="background-color: rgb(255, 232, 82);margin-right: 10px;" class="child c--6">
-            <h1 style="margin-top: 25%;">*</h1>
+            <h1 style="margin-top: 25%;font-size: 50px;">*</h1>
         </section>
         <section style="margin-left: 10px;margin-bottom: 10px;background-color: rgb(254, 132, 132);" class="child c--15">
-            <h1 style="margin-top: 25%; ">C</h1>
+            <h1 style="margin-top: 25%;font-size: 50px; ">C</h1>
         </section>
         <section class="child c--16">
             <h1 style="margin-top: 25%; ">0</h1>
         </section>
         <section class="child c--17">
-            <h1 style="margin-top: 25%; ">=</h1>
+            <h1 style="margin-top: 25%;font-size: 50px; ">=</h1>
         </section>
         <section style="background-color: rgb(255, 232, 82);margin-right: 10px;" class="child c--6">
-            <h1 style="margin-top: 25%;">/</h1>
+            <h1 style="margin-top: 25%;font-size: 50px;">/</h1>
         </section>
     </section>
 
